--- a/odoo/Home _ ClockWorksProduction.html
+++ b/odoo/Home _ ClockWorksProduction.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0038)https://clockworksproduction.odoo.com/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang>
+    <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home | ClockWorksProduction</title>
