--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=home.html">
+  <title>Redirecting...</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is the homepage of my website.</p>
+  <p>If you are not redirected automatically, follow this <a href="home.html">link</a>.</p>
+</body>
+</html>
 </body>
 </html>
